--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <canvas id="jscanvas" class="canvas"></canvas>
+    <div class="control">
+        
+        <div class="control_range">
+            <input type="range" id="jsrange" min="0.1" max="5.0" value="2.5" step="0.1">
+        </div>
+
+        <div class="control_buttons">
+            <button id="jsmode">Fill</button>
+            <button id="jssave">save</button>
+        </div>
+        
+        <div class="control_colors" id="jscolors">
+            <div class="control_color" style="background-color:black;"></div>
+            <div class="control_color" style="background-color:white;"></div>
+            <div class="control_color" style="background-color:red;"></div>
+            <div class="control_color" style="background-color:orange;"></div>
+            <div class="control_color" style="background-color:yellow;"></div>
+            <div class="control_color" style="background-color:green;"></div>
+            <div class="control_color" style="background-color:skyblue;"></div>
+            <div class="control_color" style="background-color:blue;"></div>
+            <div class="control_color" style="background-color:purple;"></div>
+        </div>
+    </div>
+
     <script src="app.js"></script>
 </body>
 </html>
